# pmsx003-rs

./: Cargo.toml  LICENSE  README.md
examples/: esp32_basic.rs  passive_mode.rs  read.rs  sleep_and_wake.rs
src/: lib.rs  read_fsm.rs
tests/: separate_rx_tx.rs
