[package]
name = "pmsx003"
version = "1.0.0"
authors = ["Cristian Lomagno <lomagno2003@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/lomagno2003/pmsx003-rs"
description = "Rust interface for PMS X003 air quality sensors"
keywords = ["pms5003", "pms7003"]
categories = ["embedded", "hardware-support", "no-std"]


[dependencies]
embedded-io = "0.6.1"

# [dev-dependencies]
# linux-embedded-hal = "0.4.0"  # Only available on Linux
